Button mobile view fix

--- a/CSS/localStyleSheet.css
+++ b/CSS/localStyleSheet.css
@@ -118,3 +118,10 @@ div.app-style {
 .changing-font-size{
   font-size:1.05vw
 }
+
+/* screen width higher than 750px */
+@media screen and (min-width: 750px) {
+  .changing-font-size{
+    font-size:1.05vw
+  }
+}
